Try to fix the misaligned style

--- a/less/current/modules/forms.less
+++ b/less/current/modules/forms.less
@@ -125,5 +125,6 @@ label {
   display: inline-block;
   *display: inline;
   *zoom: 1;
-  margin-bottom: 0;
+  margin-bottom: -40px;
+  margin-top: -40px;
 }
